--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
             <a href="#"><img src="IMG/icon02.png" alt="instagram"></a>
             <a href="#"><img src="IMG/icon03.png" alt="facebook"></a>
         </div>
-        <div class="footer_bottom">
+        <!-- <div class="footer_bottom">
             <p>
                 이용약관 | 개인정보취급방침 | 가이드 <br>
                 고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 PG사의 구매 안전서비스를 이용하실 수 있습니다. | KG 이니시스 에스크로(서비스 가입사실확인)
             </p>
-        </div>
+        </div> -->
     </footer>
 </body>
 </html>
